<resources>
    <string name="app_name">7min Workout</string>
    <string name="start">START</string>
    <string name="home_page_logo">Home page logo</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="exercise_name">EXERCISE NAME</string>
    <string name="exercise_instruction">Exercise Instruction</string>
    <string name="upcoming_exercise">UPCOMING EXERCISE:</string>
    <string name="_1">1</string>
    <string name="you_have_completed_the_workout">You have completed the workout.</string>
    <string name="finish">Finish</string>
    <string name="trophy_image">trophy_image</string>
    <string name="congratulations">Congratulations!,</string>
    <string name="end">END</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="this_will_stop_the_workout_you_have_come_this_far_are_you_sure_you_want_to_quit">This will stop the workout. You have come this far, are you sure you want to quit?</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="bmi">BMI</string>
    <string name="calculator">Calculator</string>
    <string name="weight_in_kg">WEIGHT (in kgs)</string>
    <string name="weight_in_lb">WEIGHT (in lbs)</string>
    <string name="height_in_cm">HEIGHT (in cms)</string>
    <string name="height_feet">Feet</string>
    <string name="height_inches">Inches</string>
    <string name="calculate">CALCULATE</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="imperial_units">IMPERIAL UNITS</string>
    <string name="height_in_feet_and_inches">HEIGHT (in feet and inches) :</string>
    <string name="female">FEMALE</string>
    <string name="male">MALE</string>
    <string name="age">AGE (in years)</string>
    <string name="neck_circumference_in_cms">NECK CIRCUMFERENCE (in cms)</string>
    <string name="waist_circumference_in_cms">WAIST CIRCUMFERENCE (in cms)</string>
    <string name="hip_circumference_in_cms">HIP CIRCUMFERENCE (in cms)</string>
    <string name="hip_circumference_in_inches">HIP CIRCUMFERENCE (in inches)</string>
    <string name="waist_circumference_in_inches">WAIST CIRCUMFERENCE (in inches)</string>
    <string name="neck_circumference_in_inches">NECK CIRCUMFERENCE (in inches)</string>
    <string name="body_fat">BODY FAT</string>
    <string name="body_fat1">BODY FAT :</string>
    <string name="fat_mass">BODY FAT MASS :</string>
    <string name="lean_mass">LEAN BODY MASS :</string>
    <string name="body_fat_category">BODY FAT CATEGORY :</string>
    <string name="history">History</string>
    <string name="calendar_image">Calendar Image</string>
    <string name="no_data_available">NO DATA AVAILABLE!</string>
    <string name="workout_history">WORKOUT HISTORY</string>
    <string name="clear_workout_history">CLEAR WORKOUT HISTORY</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="skip">SKIP</string>
</resources>