<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/are_you_sure"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/this_will_stop_the_workout_you_have_come_this_far_are_you_sure_you_want_to_quit"
        android:textSize="20sp"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_back_confirmation_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_blue"
            android:text="@string/yes"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_back_confirmation_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_blue"
            android:text="@string/no"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>


</LinearLayout>