<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screen_layout_padding"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/home_page_logo"
        android:scaleType="fitCenter"
        android:src="@drawable/home_page_logo"
        app:layout_constraintBottom_toTopOf="@+id/fl_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"
        />

    <FrameLayout
        android:id="@+id/fl_start"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/start_button_circular_border_ripple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_home"
        app:layout_constraintBottom_toTopOf="@id/fl_bmi_calculator">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start"
            android:textColor="@color/main_orange"
            android:textSize="@dimen/default_button_text_size"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_bmi_calculator"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/bmi_btn_border"
        app:layout_constraintBottom_toTopOf="@id/tv_calculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_start">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bmi"
            android:textColor="@color/white"
            android:textSize="@dimen/default_button_text_size"
            android:textStyle="bold" />
    </FrameLayout>
    <TextView
        android:id="@+id/tv_calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/calculator"
        android:textColor="@color/main_green"
        android:textSize="@dimen/default_button_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_bmi_calculator"
        />

</androidx.constraintlayout.widget.ConstraintLayout>