<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_history"
        android:layout_width="match_parent"
        android:theme="@style/ToolbarTheme"
        android:layout_height="?android:actionBarSize"
        android:background="@color/button_blue"
        app:title="HISTORY"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <LinearLayout
        android:id="@+id/ll_workout_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_history"
        app:layout_constraintBottom_toTopOf="@id/rv_history_dates">
    <TextView
        android:id="@+id/tv_workout_history"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="5dp"
        tools:visibility="visible"
        android:gravity="center"
        android:text="@string/workout_history"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <ImageView
        android:id="@+id/iv_delete"
        android:layout_width="20dp"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:src="@drawable/ic_action_delete"
        android:scaleType="center"
        android:visibility="visible"
        android:contentDescription="@string/delete_icon"
        />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_history_dates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/ll_workout_history"
        />

    <TextView
        android:id="@+id/tv_no_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:gravity="center"
        android:text="@string/no_data_available"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/toolbar_history"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>